# GOL

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
src/gol/: __main__.py  config.py
src/gol/adapters/: __init__.py  abstract.py  actions.py
src/gol/db/: __init__.py  actions.py
src/gol/entrypoints/api/: __init__.py
src/gol/entrypoints/cli/: __init__.py  utils.py
src/gol/presentation/: schemas.py
src/gol/service_layer/: services.py
src/gol/service_layer/uow/: __init__.py  abstract.py  sqlmodel.py
tests/functional/service_layer/: test_services.py
