[metadata]
name = GOL
version = 0.0.1
author = Nazar Annanazarov
author_email = smiron1703@gmail.com
description = GameOfLife(GOL)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 2
	Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
	= src
packages = find:

[options.packages.find]
include = gol

